# cisc310-lab2

./: .gitignore  CMakeLists.txt  README.md  document.tex  miles_generator.py
samples/patterns/: code0Only.pat  code0and8.pat
samples/sequences/: code0excessiveNoise.val  code0noNoise.val  code0w1noise.val  threeCode0NoNoise.val
src/: CMakeLists.txt  decoder.cpp  decoder.hpp  main.cpp  queue.hpp  util.hpp
test/: CMakeLists.txt
test/src/: decoder.cpp  queue.cpp
